instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:1: error: not found: value Blue
setCouleurBrosse(Blue)
                 ^